@@ -1,6 +1,6 @@
 #ifndef VERSION_HPP
 #define VERSION_HPP
-#define PRODUCTVER     0,4,0,172
-#define STRPRODUCTVER  "0,4,0,172"
-#define STRPRODUCTDATE "2012-05-08"
+#define PRODUCTVER     0,4,0,173
+#define STRPRODUCTVER  "0,4,0,173"
+#define STRPRODUCTDATE "2012-05-13"
 #endif // VERSION_HPP
